--- a/data/data_analysis.ipynb
+++ b/data/data_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "c0188e6c-bec7-4c5a-925d-bbf6936e2ed0",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "29366145-3ca4-420e-a796-a6f0c5bf9714",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
        "4  0.931721  Sometimes  Public_Transportation  Overweight_Level_II  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "878f8d9b-cdfc-4d97-906a-09fcd754aefe",
    "metadata": {},
    "outputs": [],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "40b59082-ad44-4a40-bfd9-616aedb720e8",
    "metadata": {},
    "outputs": [
@@ -528,7 +528,7 @@
        "[20758 rows x 17 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "011ccd5c-1ffa-4f28-b105-73fd6103350c",
    "metadata": {},
    "outputs": [
@@ -549,7 +549,7 @@
        "(20758, 17)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "4f001abc-e6d7-48a1-9648-5a1cb3463897",
    "metadata": {},
    "outputs": [
@@ -710,7 +710,7 @@
        "max        3.000000      3.000000      2.000000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "0c3d176c-4b39-4ff6-851c-442ed0e52f10",
    "metadata": {},
    "outputs": [
@@ -748,7 +748,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "e6fe365c-0c16-4552-b58b-6d66ee3f841e",
    "metadata": {},
    "outputs": [
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "c181293a-41d7-45c4-be1f-81e2e829997b",
    "metadata": {},
    "outputs": [],
@@ -809,12 +809,13 @@
     "le = LabelEncoder()\n",
     "def transform_label(feature_name):\n",
     "    le.fit(obesity_data[feature_name])\n",
+    "    print(le.classes_)\n",
     "    obesity_data[feature_name] = le.transform(obesity_data[feature_name])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "id": "4b439012-3104-40d0-9788-01f2c4bdf924",
    "metadata": {},
    "outputs": [],
@@ -824,10 +825,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "id": "ef4d24a5-dce3-45a7-b003-11245c312767",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Female' 'Male']\n",
+      "['no' 'yes']\n",
+      "['no' 'yes']\n",
+      "['Always' 'Frequently' 'Sometimes' 'no']\n",
+      "['no' 'yes']\n",
+      "['no' 'yes']\n",
+      "['Frequently' 'Sometimes' 'no']\n",
+      "['Automobile' 'Bike' 'Motorbike' 'Public_Transportation' 'Walking']\n",
+      "['Insufficient_Weight' 'Normal_Weight' 'Obesity_Type_I' 'Obesity_Type_II'\n",
+      " 'Obesity_Type_III' 'Overweight_Level_I' 'Overweight_Level_II']\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1137,7 +1154,7 @@
        "[20758 rows x 17 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "id": "6a3b4972-7c77-490d-9b26-e7c132e58c87",
    "metadata": {},
    "outputs": [
@@ -1160,7 +1177,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1177,6 +1194,302 @@
    ],
    "source": [
     "sns.heatmap(obesity_data.corr())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "fbfa2f8e-7bb3-44e7-9b69-0f6a8f9506b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obesity_data = obesity_data.drop(['CH2O','NCP','MTRANS','TUE'],axis=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "4b32a583-ef08-4591-bcc0-74cdc59ebe73",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Height</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>family_history_with_overweight</th>\n",
+       "      <th>FAVC</th>\n",
+       "      <th>FCVC</th>\n",
+       "      <th>CAEC</th>\n",
+       "      <th>SMOKE</th>\n",
+       "      <th>SCC</th>\n",
+       "      <th>FAF</th>\n",
+       "      <th>CALC</th>\n",
+       "      <th>NObeyesdad</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>24.443011</td>\n",
+       "      <td>1.699998</td>\n",
+       "      <td>81.669950</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>18.000000</td>\n",
+       "      <td>1.560000</td>\n",
+       "      <td>57.000000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>18.000000</td>\n",
+       "      <td>1.711460</td>\n",
+       "      <td>50.165754</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.880534</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.866045</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>20.952737</td>\n",
+       "      <td>1.710730</td>\n",
+       "      <td>131.274851</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.467863</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>31.641081</td>\n",
+       "      <td>1.914186</td>\n",
+       "      <td>93.798055</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.679664</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.967973</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20753</th>\n",
+       "      <td>1</td>\n",
+       "      <td>25.137087</td>\n",
+       "      <td>1.766626</td>\n",
+       "      <td>114.187096</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.919584</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.330519</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20754</th>\n",
+       "      <td>1</td>\n",
+       "      <td>18.000000</td>\n",
+       "      <td>1.710000</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20755</th>\n",
+       "      <td>1</td>\n",
+       "      <td>20.101026</td>\n",
+       "      <td>1.819557</td>\n",
+       "      <td>105.580491</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.407817</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.158040</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20756</th>\n",
+       "      <td>1</td>\n",
+       "      <td>33.852953</td>\n",
+       "      <td>1.700000</td>\n",
+       "      <td>83.520113</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.671238</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20757</th>\n",
+       "      <td>1</td>\n",
+       "      <td>26.680376</td>\n",
+       "      <td>1.816547</td>\n",
+       "      <td>118.134898</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.684487</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>20758 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Gender        Age    Height      Weight  \\\n",
+       "0           1  24.443011  1.699998   81.669950   \n",
+       "1           0  18.000000  1.560000   57.000000   \n",
+       "2           0  18.000000  1.711460   50.165754   \n",
+       "3           0  20.952737  1.710730  131.274851   \n",
+       "4           1  31.641081  1.914186   93.798055   \n",
+       "...       ...        ...       ...         ...   \n",
+       "20753       1  25.137087  1.766626  114.187096   \n",
+       "20754       1  18.000000  1.710000   50.000000   \n",
+       "20755       1  20.101026  1.819557  105.580491   \n",
+       "20756       1  33.852953  1.700000   83.520113   \n",
+       "20757       1  26.680376  1.816547  118.134898   \n",
+       "\n",
+       "       family_history_with_overweight  FAVC      FCVC  CAEC  SMOKE  SCC  \\\n",
+       "0                                   1     1  2.000000     2      0    0   \n",
+       "1                                   1     1  2.000000     1      0    0   \n",
+       "2                                   1     1  1.880534     2      0    0   \n",
+       "3                                   1     1  3.000000     2      0    0   \n",
+       "4                                   1     1  2.679664     2      0    0   \n",
+       "...                               ...   ...       ...   ...    ...  ...   \n",
+       "20753                               1     1  2.919584     2      0    0   \n",
+       "20754                               0     1  3.000000     1      0    0   \n",
+       "20755                               1     1  2.407817     2      0    0   \n",
+       "20756                               1     1  2.671238     2      0    0   \n",
+       "20757                               1     1  3.000000     2      0    0   \n",
+       "\n",
+       "            FAF  CALC  NObeyesdad  \n",
+       "0      0.000000     1           6  \n",
+       "1      1.000000     2           1  \n",
+       "2      0.866045     2           0  \n",
+       "3      1.467863     1           4  \n",
+       "4      1.967973     1           6  \n",
+       "...         ...   ...         ...  \n",
+       "20753  1.330519     1           3  \n",
+       "20754  2.000000     1           0  \n",
+       "20755  1.158040     2           3  \n",
+       "20756  0.000000     2           6  \n",
+       "20757  0.684487     1           3  \n",
+       "\n",
+       "[20758 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obesity_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "4238e0c0-c94b-4e36-9914-80f36456053d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obesity_data.to_csv(\"model_training_data.csv\")"
    ]
   }
  ],
@@ -1196,7 +1509,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
